RESOLVED FIXED129273
Break out ImageControls style into an external stylesheet
https://bugs.webkit.org/show_bug.cgi?id=129273
Summary Break out ImageControls style into an external stylesheet
Brady Eidson
Reported 2014-02-24 13:41:29 PST
Break out ImageControls style into an external stylesheet
Attachments
Patch v1 (11.42 KB, patch)
2014-02-24 13:44 PST, Brady Eidson
jer.noble: review+
Brady Eidson
Comment 1 2014-02-24 13:44:32 PST
Created attachment 225093 [details] Patch v1
Jer Noble
Comment 2 2014-02-24 13:46:15 PST
Comment on attachment 225093 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=225093&action=review r=me with nit. > Source/WebCore/html/shadow/mac/ImageControlsRootElementMac.cpp:33 > +#include "Event.h" > +#include "EventNames.h" > +#include "Page.h" Are these really necessary?
Brady Eidson
Comment 3 2014-02-24 13:47:36 PST
(In reply to comment #2) > (From update of attachment 225093 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=225093&action=review > > r=me with nit. > > > Source/WebCore/html/shadow/mac/ImageControlsRootElementMac.cpp:33 > > +#include "Event.h" > > +#include "EventNames.h" > > +#include "Page.h" > > Are these really necessary? Nope, sorry - leftovers from a patch split-up
Brady Eidson
Comment 4 2014-02-24 13:54:06 PST
Note You need to log in before you can comment on or make changes to this bug.