Break out ImageControls style into an external stylesheet https://bugs.webkit.org/show_bug.cgi?id=129273

Reviewed by Jer Noble.

* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:

* css/CSSDefaultStyleSheets.cpp:
(WebCore::CSSDefaultStyleSheets::ensureDefaultStyleSheetsForElement):
* css/CSSDefaultStyleSheets.h:

* html/shadow/mac/ImageControlsRootElementMac.cpp:
(WebCore::ImageControlsRootElementMac::maybeCreate):

* html/shadow/mac/imageControlsMac.css:
(.x-webkit-imagemenu):
(.x-webkit-imagemenu:hover):

* rendering/RenderTheme.h:
(WebCore::RenderTheme::mediaControlsScript):
(WebCore::RenderTheme::imageControlsStyleSheet):
* rendering/RenderThemeMac.h:
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::imageControlsStyleSheet):

Canonical link: https://commits.webkit.org/147314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164606 268f45cc-cd09-0410-ab3c-d52691b4dbfc