Source/WebCore/css/CSSDefaultStyleSheets.cpp
@@ -56,6 +56,7 @@ StyleSheetContents* CSSDefaultStyleSheets::mathMLStyleSheet;
 StyleSheetContents* CSSDefaultStyleSheets::mediaControlsStyleSheet;
 StyleSheetContents* CSSDefaultStyleSheets::fullscreenStyleSheet;
 StyleSheetContents* CSSDefaultStyleSheets::plugInsStyleSheet;
+StyleSheetContents* CSSDefaultStyleSheets::imageControlsStyleSheet;
 
 // FIXME: It would be nice to use some mechanism that guarantees this is in sync with the real UA stylesheet.
 static const char* simpleUserAgentStyleSheet = "html,body,div{display:block}head{display:none}body{margin:8px}div:focus,span:focus,a:focus{outline:auto 5px -webkit-focus-ring-color}a:-webkit-any-link{color:-webkit-link;text-decoration:underline}a:-webkit-any-link:active{color:-webkit-activelink}";
@@ -187,6 +188,16 @@ void CSSDefaultStyleSheets::ensureDefaultStyleSheetsForElement(Element* element,
         fullscreenStyleSheet = parseUASheet(fullscreenRules);
         defaultStyle->addRulesFromSheet(fullscreenStyleSheet, screenEval());
         defaultQuirksStyle->addRulesFromSheet(fullscreenStyleSheet, screenEval());
+        changedDefaultStyle = true;
+    }
+#endif
+
+#if ENABLE(IMAGE_CONTROLS)
+    if (!imageControlsStyleSheet && element->isImageControlsRootElement()) {
+        String imageControlsRules = RenderTheme::themeForPage(element->document().page())->imageControlsStyleSheet();
+        imageControlsStyleSheet = parseUASheet(imageControlsRules);
+        defaultStyle->addRulesFromSheet(imageControlsStyleSheet, screenEval());
+        defaultPrintStyle->addRulesFromSheet(imageControlsStyleSheet, printEval());
         changedDefaultStyle = true;
     }
 #endif
