Source/WebCore/css/CSSDefaultStyleSheets.h
@@ -43,6 +43,7 @@ public:
     static StyleSheetContents* mediaControlsStyleSheet;
     static StyleSheetContents* fullscreenStyleSheet;
     static StyleSheetContents* plugInsStyleSheet;
+    static StyleSheetContents* imageControlsStyleSheet;
 
     static void ensureDefaultStyleSheetsForElement(Element*, bool& changedDefaultStyle);
     static void loadFullDefaultStyle();
